# Linear_Alegebra_LAFF

./: README.md  pyproject.toml
Homework/: 1.3.1.1.ipynb  1.3.2.ipynb  1.3.3.ipynb  1.4.2.ipynb  1.4.3.ipynb  1.4.4.ipynb  1.4.5.ipynb
