[tool.poetry]
name = "linear-alegebra-laff"
version = "0.1.0"
description = "Linear Algebra Python Exercises for LAFF (UT Austin)"
authors = ["Wes Aspinall"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
