[tool.poetry]
name = "linear-alegebra-laff"
version = "0.1.0"
description = "Linear Algebra Python Exercises for LAFF (UT Austin)"
authors = ["Wes Aspinall"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
